--- a/TP1 - Selectores y Layout/TP1.html
+++ b/TP1 - Selectores y Layout/TP1.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platense vs Rosario Central</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="divContenido">
+        <p class="index">RECORD|FÚTBOL|FÚTBOL</p>
     <h1>Platense vs. Rosario Central: Alineaciones y todo lo que debes saber sobre el partido por Torneo Apertura Argentina</h1>
-    <p>Platense y Rosario Central se enfrentan con realidades opuestas y tensión en el aire.</p>
-    <img src="img/Platense-vs.-Rosario-Central.-360x181.webp" alt="Imagen previa del partido">
+    <h2>Platense y Rosario Central se enfrentan con realidades opuestas y tensión en el aire.</h2>
+
+    <img class="image" src="img/Platense-vs.-Rosario-Central.-360x181.webp" alt="Imagen previa del partido">
+    <p class="description">Platense vs. Rosario Central.</p>
+
     <p>Este martes desde las 20, el Estadio Ciudad de Vicente López será escenario de un duelo que promete alto voltaje futbolístico y emocional. Platense recibe a Rosario Central por la fecha 13 de la Zona B del Torneo Apertura de la Liga Profesional 2025, en un partido donde ambos equipos llegan con objetivos distintos, pero con la misma urgencia de mostrar carácter en el tramo final de la fase regular.</p>
     <p>Por un lado, el “Calamar” aún pelea por asegurar su lugar entre los clasificados a los octavos de final. A pesar del golpe que significó la reciente derrota frente a Deportivo Riestra, el equipo dirigido por Sergio Gómez y Favio Orsi se mantiene en puestos de clasificación y buscará una victoria vital que lo aleje de la zona roja. No será tarea sencilla: Platense contará con cuatro ausencias importantes. Rodrigo Herrera está suspendido, mientras que Gustavo Goñi, Jonathan Bay y Maximiliano Rodríguez siguen fuera por lesión.</p>
     <p>En la otra vereda, el “Canalla” ya tiene el boleto asegurado a la siguiente fase y llega entonado tras eliminar a Los Andes en la Copa Argentina. Además, Rosario Central arrastra un invicto de cinco partidos, pero no se conforma: quiere terminar puntero de su grupo para tener la ventaja de definir de local en los octavos.</p>
@@ -37,6 +43,7 @@
         <h4>Rosario Central:</h4>
         <p>Jorge Broun; Emanuel Coronel, Facundo Mallo, Carlos Quintana, Agustín Sández; Federico Navarro, Franco Ibarra; Gaspar Duarte o Santiago López, Santiago Segovia o Ignacio Malcorra, Lautaro Giaccone; Enzo Copetti.<br>DT: Ariel Holan.</p>
     </ul>
+
     
     <form >
         <h5>¡SUSCRÍBETE PARA OBTENER MÁS INFORMACIÓN!</h5>
@@ -48,6 +55,6 @@
         <br>
         <input type="submit" value="Enviar">
     </form>
-    
+</div>
 </body>
 </html>
