--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <h1>Index con los respectivos trabajos de clase.</h1>
     <ul>
-        <li><a href="Actividad - Clase 2/Actividad.html">Actividad Clase 2</a></li>
-        <li><a href="Actividad - Clase 3/Actividad_3.html">Actividad Clase 3</a></li>
-        <li><a href="TP1 - Selectores y Layout/TP1.html">TP1 - Selectores y Layout</a></li>
+        <li><a href="Actividad - Clase 2/index.html">Actividad Clase 2</a></li>
+        <li><a href="Actividad - Clase 3/index.html">Actividad Clase 3</a></li>
+        <li><a href="TP1 - Selectores y Layout/index.html">TP1 - Selectores y Layout</a></li>
+        <li><a href="Actividad - Clase 5/index.html">Actividad Clase 5</a></li>
     </ul>
 </body>
 </html>
