--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="Actividad - Clase 3/index.html">Actividad Clase 3</a></li>
         <li><a href="TP1 - Selectores y Layout/index.html">TP1 - Selectores y Layout</a></li>
         <li><a href="Actividad - Clase 5/index.html">Actividad Clase 5</a></li>
+        <li><a href="TP2 - FlexBox/index.html">TP2 - Flexbox</a></li>
     </ul>
 </body>
 </html>
