--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <li><a href="TP1 - Selectores y Layout/index.html">TP1 - Selectores y Layout</a></li>
         <li><a href="Actividad - Clase 5/index.html">Actividad Clase 5</a></li>
         <li><a href="TP2 - FlexBox/index.html">TP2 - Flexbox</a></li>
+        <li><a href="Actividad - Clase 9/index.html">Actividad - Clase 9 </a></li>
+        <li><a href="Actividad - Clase 10/index.html">Actividad - Clase 10 </a></li>
     </ul>
 </body>
 </html>
