--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="TP2 - FlexBox/index.html">TP2 - Flexbox</a></li>
         <li><a href="Actividad - Clase 9/index.html">Actividad - Clase 9 </a></li>
         <li><a href="Actividad - Clase 10/index.html">Actividad - Clase 10 </a></li>
+        <li><a href="TP3 - API REST/index.html">TP3 - API REST </a></li>
     </ul>
 </body>
 </html>
